# fosi

./: .gitignore  LICENSE  Podfile  PrivacyPolicy.md  README.md  libeasylistparser-bridge.h
Fosi/: AppDatabase.swift  AppDelegate.swift  BlockListParser.swift  BlockRule.swift  BrowserViewController.swift  CircularProgressView.swift  CompletionProviders.swift  Fosi.entitlements  HistoryManager.swift  Info.plist  OpenTabsViewController.swift  PDFViewController.swift  SearchEngines.swift  SearchExpView.swift  SearchHolderView.swift  WebviewPool.swift  WheelCounter.swift
Fosi.xcodeproj/: project.pbxproj
Fosi.xcworkspace/: contents.xcworkspacedata
Fosi/BlockListsParser/: Rule.swift
Fosi/blocklists/: blocking-content-rules-social.json  fanboy-cookiemonster.json  filters.json  idc.json
Fosi/js/: index.js
FosiFastlane/: FosiFastlane.swift
FosiTests/: FosiTests.swift
FosiUITests/: FosiUITests.swift
HyperFocus/: AppDatabase.swift  AppDelegate.swift  BrowserAppDelegate.swift  BrowserViewController.swift  CircularProgressView.swift  CompletionProviders.swift  DarkReader.js  HFDatabase.swift  HistoryManager.swift  HyperFocusApp.swift  Info.plist  OpenTabsViewController.swift  PDFViewController.swift  WebviewPool.swift  WheelCounter.swift  index.js
HyperFocus.xcodeproj/: project.pbxproj
HyperFocus.xcworkspace/: contents.xcworkspacedata
HyperFocus/js/: index.js
HyperFocusUITests/: HyperFocusUITests.swift
Settings.bundle/: Root.plist
ShareExtension/: ShareViewController.swift
easylist-parser/: Cargo.toml  rust.h
easylist-parser/src/: lib.rs
(+19 files in other folders)
