[package]
name = "easylist-parser"
version = "0.1.0"
authors = ["Chinmay Kulkarni <chinmaymk@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adblock = { git = "https://github.com/brave/adblock-rust", features = ["content-blocking"] }
serde_json = "1.0.59" 

[lib]
name = "easylist"
crate-type = ["staticlib", "cdylib"]
